// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoggingConfigurationForm renders a loading spinner 1`] = `
<div>
  <div
    class="nxrm-section nx-tile nxrm-logging-configuration-form"
  >
    <div
      class="nx-loading-spinner"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-notch fa-w-16 fa-spin nx-loading-spinner__icon nx-icon"
        data-icon="circle-notch"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
          fill="currentColor"
        />
      </svg>
      <span>
        Loading…
      </span>
    </div>
  </div>
</div>
`;

exports[`LoggingConfigurationForm renders an error message 1`] = `
<div>
  <div
    class="nxrm-section nx-tile nxrm-logging-configuration-form"
  >
    <div
      class="nx-alert nx-alert--error"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times-circle fa-w-16 nx-icon"
        data-icon="times-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
          fill="currentColor"
        />
      </svg>
      <span>
        An error occurred loading data.
      </span>
       
      <span>
        Error
      </span>
    </div>
  </div>
</div>
`;

exports[`LoggingConfigurationForm renders the resolved data 1`] = `
<div>
  <div
    class="nxrm-section nx-tile nxrm-logging-configuration-form"
  >
    <div
      class="field-wrapper"
    >
      <label
        class="field-wrapper-label"
        for="name"
      >
        Logger Name
      </label>
      <input
        class="nxrm-textfield"
        disabled=""
        id="name"
        name="name"
        required=""
        type="text"
        value="ROOT"
      />
    </div>
    <div
      class="field-wrapper"
    >
      <label
        class="field-wrapper-label"
        for="level"
      >
        Logger Level
      </label>
      <select
        class="nxrm-select"
        id="level"
        name="level"
      >
        <option
          value="OFF"
        >
          OFF
        </option>
        <option
          value="ERROR"
        >
          ERROR
        </option>
        <option
          value="WARN"
        >
          WARN
        </option>
        <option
          value="INFO"
        >
          INFO
        </option>
        <option
          value="DEBUG"
        >
          DEBUG
        </option>
        <option
          value="TRACE"
        >
          TRACE
        </option>
      </select>
    </div>
    <div
      class="nxrm-section-footer nx-tile-footer"
    >
      <button
        class="nx-btn nx-btn--primary"
        disabled=""
        type="submit"
      >
        Save
      </button>
      <button
        class="nx-btn"
        type="input"
      >
        Cancel
      </button>
      <button
        class="nx-btn nx-btn--error"
        type="input"
      >
        Reset to Default Level
      </button>
    </div>
  </div>
</div>
`;

exports[`LoggingConfigurationForm requires the name field when creating a new logging configuration 1`] = `
<div>
  <div
    class="nxrm-section nx-tile nxrm-logging-configuration-form"
  >
    <div
      class="field-wrapper"
    >
      <label
        class="field-wrapper-label"
        for="name"
      >
        Logger Name
      </label>
      <input
        class="nxrm-textfield missing-required-value"
        id="name"
        name="name"
        required=""
        type="text"
        value=""
      />
      <span
        class="nxrm-error-message"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon"
          data-icon="exclamation-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
        <span
          class="nxrm-error-message-text"
          tabindex="-1"
        >
           
          This field is required
           
        </span>
      </span>
    </div>
    <div
      class="field-wrapper"
    >
      <label
        class="field-wrapper-label"
        for="level"
      >
        Logger Level
      </label>
      <select
        class="nxrm-select"
        id="level"
        name="level"
      >
        <option
          value="OFF"
        >
          OFF
        </option>
        <option
          value="ERROR"
        >
          ERROR
        </option>
        <option
          value="WARN"
        >
          WARN
        </option>
        <option
          value="INFO"
        >
          INFO
        </option>
        <option
          value="DEBUG"
        >
          DEBUG
        </option>
        <option
          value="TRACE"
        >
          TRACE
        </option>
      </select>
    </div>
    <div
      class="nxrm-section-footer nx-tile-footer"
    >
      <button
        class="nx-btn nx-btn--primary"
        disabled=""
        type="submit"
      >
        Save
      </button>
      <button
        class="nx-btn"
        type="input"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
